<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="start_image">start image</string>
    <string name="start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="this_will_stop_your_workout_you_have_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You have come this far, are you sure you want to quit?</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="history">History</string>
</resources>